fixed color contrast

--- a/src/components/ProfessorComponent/ProfessorComponent.css
+++ b/src/components/ProfessorComponent/ProfessorComponent.css
@@ -10,4 +10,5 @@
 .showMore {
     border: 1.5px solid black;
     background-color: gray;
+    color: white;
 }
